Updating memory setting now updates files instead of creating new files.